improve README and add some fixes